--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -138,7 +138,7 @@ nav ul li a {
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    
+
     /* identical to box height, or 162% */
     font-feature-settings: 'salt' on, 'liga' off;
 
@@ -182,6 +182,7 @@ nav ul li a {
 #copyright_and_image{
     margin-left:5px;
 }
+
 #copyright_anturio{
     position: static;
     left: 0%;
@@ -218,4 +219,32 @@ nav ul li a {
     flex-grow: 2;
     margin: 0px 5px;
 }
+
+@media only screen and (max-width: 780px) {
+    #first_links{
+        display:none;
+    }
+    .sector_empresa{
+        display:none;
+    }
+    .sector_support{
+        display:none;
+    }
+    #second_links{
+        margin-top:10px;
+        line-height: 26px;
+    }
+    #empresas{
+        display:none;
+    }
+
+    #clear_fix{
+        display:none;
+    }
+
+    #copyright_anturio{
+        top:100px;
+    }
+  }
 /* fim footer */
+
