--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -53,11 +53,30 @@ nav ul {
     line-height: 60px;
     list-style: none;
     background: rgba(0, 0, 0, 0);
-    overflow: hidden;
+    /*overflow: hidden;*/
     padding: 0;
     text-align: right;
     margin: 0;
     padding-right: 40px;
+    transition: 1s;
+    
+}
+.dropbtn{
+    border: none;
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.35px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    line-height: 60px;
+    list-style: none;
+    background: rgba(0, 0, 0, 0);
+    padding: 0;
+    text-align: right;
+    margin: 0;
     transition: 1s;
 }
 
@@ -226,4 +245,43 @@ nav ul li a {
     flex-grow: 2;
     margin: 0px 5px;
 }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 28%;
+    background-color: transparent;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: #FFFFFF;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-weight: 300;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    font-weight: 1000;
+}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    transform: scale(1.2);
+    }
 /* fim footer */
