--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -279,7 +279,7 @@ nav ul li a {
     }
 /* fim footer */
 
-@media only screen and (max-width: 500px)  {
+@media only screen and (min-width: 500px) and (min-width: 699) {
     #first_links{
         display:none;
     }
