--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -287,7 +287,7 @@ nav ul li a {
     }
 /* fim footer */
 
-@media only screen and (min-width: 500px) and (min-width: 699) {
+@media only screen and (min-width: 500px) and (min-width: 699px) {
     #first_links{
         display:none;
     }
