--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -237,13 +237,26 @@ nav ul li a {
     flex-grow: 0;
     margin: 8px 0px;
 }
-
+#social_media{
+    margin-bottom:10%;
+}
 
 #social_media img{
     flex: none;
     order: 0;
     flex-grow: 2;
     margin: 0px 5px;
+}
+
+.sector_empresa{
+    margin-top: 8% !important;
+}
+
+.sector_support{
+    margin-top: 8% !important;
+}
+#anturio_logo{
+    margin-top: 2% !important;
 }
   
   /* The container <div> - needed to position the dropdown content */
@@ -312,6 +325,10 @@ nav ul li a {
     #copyright_anturio{
         top:100px;
     }
+
+    #social_media{
+        margin-bottom:10%;
+    }
   }
 
   @media only screen and (min-width: 700px) and (max-width: 1038px) {
@@ -345,6 +362,9 @@ nav ul li a {
         justify-content: center;
         align-items: center;
         text-align: center;
+    }
+    #social_media{
+        margin-bottom:10%;
     }
   }
 /* fim footer */
