--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -88,7 +88,7 @@ nav ul {
     margin-right: 6px;
 }
 
-nav.black ul {
+.black {
     background: #000;
 }
 
@@ -146,7 +146,7 @@ nav ul li a {
     nav ul li {
           box-sizing: border-box;
           width: 100%;
-          padding: 24px;
+          padding-top: 0px;
           text-align: center;
     }
 
