--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -167,7 +167,7 @@ nav ul li a {
     clear: both; 
     z-index: 1; 
     height: 100%;
-    margin-top: 40em; 
+    /*margin-top: 40em; */
  }
 
 #first_links a{
