--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -45,8 +45,9 @@ html, body {
 }
 
 #number_4{
-    padding-right: 100px;
+    /*padding-right: 100px;*/
     align-self:center;
+    margin-right:100px;
 }
 
 #dot_point{
@@ -60,7 +61,6 @@ html, body {
     
     #different_sectors{
         width:auto;
-        flex-direction: row;
         display: flex;
         align-content: center;
         flex-wrap: wrap;
@@ -73,6 +73,8 @@ html, body {
         font-size: 24px;
         line-height: 24px;
 
+        margin-left:auto;
+        margin-right:auto;
        /* flex: 0 0 80px;*/
 
         text-align: center;
@@ -80,8 +82,16 @@ html, body {
 
     #number_4{
      /*   flex: 0 0 100%;*/
-        padding-right: 40px;
+      /*  padding-right: 40px;*/
         align-self: center;
+        justify-content: center;
+        margin-left:auto;
+        margin-right:auto;
+        /*
+        margin-left:auto;
+        margin-right:auto;
+        text-align: center;
+        */
         padding-bottom: 30px;
     }
   }
@@ -112,8 +122,9 @@ html, body {
    }
 
    #number_4{
-    padding-right: 0px;
     align-self:center;
+    margin-right:0px;
+    margin-left:100px;
 }
   }
 
