--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -58,11 +58,12 @@ html, body {
 }
 
 /*Mobile*/
-  @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 608px) {
     
     #different_sectors{
         width:auto;
         display: flex;
+        flex-direction: column;
         align-content: center;
         flex-wrap: wrap;
     }
@@ -82,7 +83,7 @@ html, body {
     }
     #dot_point{
     
-        margin-top:11px;
+        margin-top:17px;
     }
     
 
@@ -103,7 +104,7 @@ html, body {
   }
 
 /* tablet*/
-  @media only screen and (min-width: 501px) and (max-width: 992px) {
+  @media only screen and (min-width: 609px) and (max-width: 992px) {
     #different_sectors{
         width:auto;
     }
@@ -120,7 +121,7 @@ html, body {
 
    #dot_point{
     
-    margin-top:23px;
+    margin-top:26px;
     margin-left: 3px;
     width:6;
     height:6; 
