--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -636,3 +636,140 @@ nav ul li a {
   }
 /* fim footer */
 
+/* Especialistas em diferentes setores style */
+
+/*#diferent_sectors{
+    width:auto;
+    position: relative;
+    background: #212121;
+    height: 459px;
+    color: white;
+    margin-bottom: 50px;
+    justify-content: center;
+    align-items: center;
+}*/
+
+html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
+  }
+
+#different_sectors{
+    width:auto;
+    display: flex;
+    justify-content: space-around;
+    background: #212121;
+    height: 459px;
+    color: white;
+    margin-bottom: 50px;
+}
+#especialists_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 61px;
+    float: left;
+
+    line-height: 72px;
+/*    position: absolute;
+    left: 231px;
+    top: 162px;
+    width:auto;*/
+    align-self:center;
+    letter-spacing: -0.5px;
+    color: rgba(255, 255, 255, 0.38);
+}
+
+#number_4{
+    /*padding-right: 100px;*/
+    align-self:center;
+    margin-right:100px;
+}
+
+#dot_point{
+    position: absolute;
+    margin-top:48px;
+    margin-left: 3px; 
+    display: inline-block;
+}
+
+/*Mobile*/
+  @media only screen and (max-width: 608px) {
+    
+    #different_sectors{
+        width:auto;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: wrap;
+    }
+
+    #especialists_text{
+        font-family: Ubuntu;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 24px;
+
+        margin-left:auto;
+        margin-right:auto;
+       /* flex: 0 0 80px;*/
+
+        text-align: center;
+    }
+    #dot_point{
+    
+        margin-top:17px;
+    }
+    
+
+    #number_4{
+     /*   flex: 0 0 100%;*/
+      /*  padding-right: 40px;*/
+        align-self: center;
+        justify-content: center;
+        margin-left:auto;
+        margin-right:auto;
+        /*
+        margin-left:auto;
+        margin-right:auto;
+        text-align: center;
+        */
+        padding-bottom: 30px;
+    }
+  }
+
+/* tablet*/
+  @media only screen and (min-width: 609px) and (max-width: 992px) {
+    #different_sectors{
+        width:auto;
+    }
+   #especialists_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 36px;
+    /* or 103% */
+    
+    letter-spacing: 0.25px;
+   }
+
+   #dot_point{
+    
+    margin-top:26px;
+    margin-left: 3px;
+    width:6;
+    height:6; 
+   }
+
+   #number_4{
+    align-self:center;
+    margin-right:0px;
+    margin-left:100px;
+}
+  }
+
+/* Fim de Especialistas em diferentes setores style */
