--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -54,7 +54,6 @@ html, body {
 }
 
 #dot_point{
-    position: absolute;
     margin-top:48px;
     margin-left: 3px; 
     display: inline-block;
@@ -135,7 +134,7 @@ html, body {
     align-self:center;
     margin-right:0px;
     margin-left:100px;
-}
+  }
 
 }
 
@@ -248,17 +247,105 @@ html, body {
   color: rgba(255, 255, 255, 0.38);
 }
 
+
 #clients_svgs{
   display: flex;
   width: 65%;
   align-self:center;
   justify-content: space-evenly;
 }
+#first_two_icons_clients{
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  margin-left: 15%;
+}
 
+#second_two_icons_clients{
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  margin-right: 15%;
+}
 .icons_clients{
   align-self:center;
   justify-content: space-between;
 }
 
+@media only screen and (min-width: 609px) and (max-width: 992px) {
+  #different_sectors{
+      width:auto;
+  }
+ #especialists_text{
+  font-family: Ubuntu;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 35px;
+  line-height: 36px;
+  padding-left: 10%;
+  /* or 103% */
+  
+  letter-spacing: 0.25px;
+ }
 
+ #dot_point{
+  
+  margin-top:26px;
+  margin-left: 3px;
+  width:6;
+  height:6; 
+ }
+
+ #number_4{
+  align-self:center;
+  margin-right:0px;
+  margin-left:100px;
+}
+
+}
+
+/*Mobile*/
+@media only screen and (max-width: 608px) {
+  #clients_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    /* or 120% */
+
+    text-align: center;
+    letter-spacing: 0.15px;
+
+  }
+  
+}
+
+/*Tablet*/
+@media only screen and (max-width: 608px) {
+  #clients_svgs{
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+  }
+  #div_trusted_clients {
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+  }
+  #first_two_icons_clients{
+    margin-left: 0%;
+    width: 100%;
+    margin-bottom: 22px;
+    justify-content: space-evenly;
+  }
+  #second_two_icons_clients{
+    margin-right: 0%;
+    width: 100%;
+    justify-content: space-evenly;
+    }
+  }
 /* Fim de Div "Mais de 500 clientes que confiam em nós" */
