Final changes on icons svg and divs made today

--- a/www/styles/style_especialistas.css
+++ b/www/styles/style_especialistas.css
@@ -182,10 +182,14 @@ html, body {
   }
 
   #first_two_icons{
+    display:flex;
+    align-self:center;
     margin-left: 0%;
   }
 
   #second_two_icons{
+    display:flex;
+    align-self:center;
     margin-right: 0%;
   }
 }
