--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1144,3 +1144,171 @@ html, body {
    
   }
   /*Fim de Div Construção, Indústria, Distribuição e TI*/
+
+  /* Início de Div "Mais de 500 clientes que confiam em nós" */
+#div_trusted_clients{
+    width:auto;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    height: 360px;
+    background: #212121;
+    margin-bottom:50px; /* temporário */
+    color:white;
+  }
+  
+  #clients_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 36px;
+  
+    letter-spacing: 0.25px;
+    /* float: left; temporário */
+  
+    align-self:center;
+    color: rgba(255, 255, 255, 0.38);
+  }
+  
+  
+  #clients_svgs{
+    display: flex;
+    width: 100%;
+    align-self:center;
+    justify-content: space-evenly;
+  }
+  #first_two_icons_clients{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin-left: 15%;
+  }
+  
+  #second_two_icons_clients{
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin-right: 15%;
+  }
+  .icons_clients{
+    align-self:center;
+    justify-content: space-between;
+  }
+  
+  @media only screen and (min-width: 609px) and (max-width: 992px) {
+    #different_sectors{
+        width:auto;
+    }
+   #especialists_text{
+    font-family: Ubuntu;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 35px;
+    line-height: 36px;
+    padding-left: 10%;
+    /* or 103% */
+    
+    letter-spacing: 0.25px;
+   }
+  
+   #dot_point{
+    
+    margin-top:26px;
+    margin-left: 3px;
+    width:6;
+    height:6; 
+   }
+  
+   #number_4{
+    align-self:center;
+    margin-right:0px;
+    margin-left:100px;
+  }
+  
+  }
+  #breakline_phone{
+    display:none;
+  }
+  
+  /*Mobile*/
+  @media only screen and (max-width: 607px) {
+    #clients_text{
+      font-family: Ubuntu;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 24px;
+      /* or 120% */
+  
+      text-align: center;
+      letter-spacing: 0.15px;
+  
+    }
+    #breakline_phone{
+      display:block;
+    }
+    
+    #clients_svgs{
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      flex-wrap: wrap;
+    }
+    #div_trusted_clients {
+      display:flex;
+      justify-content: center;
+      flex-direction: column;
+      align-content: center;
+      flex-wrap: wrap;
+    }
+    #first_two_icons_clients{
+      display:flex;
+      margin-left: 0%;
+      width: 100%;
+      margin-top:20px;
+      margin-bottom: 50px;
+      align-self:center;
+      justify-content: space-evenly;
+    }
+    #second_two_icons_clients{
+      display:flex;
+      margin-right: 0%;
+      width: 100%;
+      align-self:center;
+      justify-content: space-evenly;
+      }
+    
+  }
+  
+  
+  #dot_point_clients{    
+    margin-top: 14px;
+    margin-left: 3px;
+  }
+  /*Tablet*/
+  @media only screen and (min-width: 608px) and (max-width: 992px) {
+    
+    #first_two_icons_clients{
+      display:flex;
+      margin-left: 0%;
+      width: 100%;
+      align-self:center;
+      justify-content: space-evenly;
+    }
+    #second_two_icons_clients{
+      display:flex;
+      margin-right: 0%;
+      width: 100%;
+      align-self:center;
+      justify-content: space-evenly;
+      }
+    
+    }
+  /* Fim de Div "Mais de 500 clientes que confiam em nós" */
+
+  /* ponto final geral */
+  .dot_point_geral{
+      color: #ED1C23;
+
+  }
