--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1312,3 +1312,49 @@ html, body {
       color: #ED1C23;
 
   }
+
+
+
+
+
+  /* CONTACT US - INICIO */
+
+#contact-us{
+    background: #F5F5F5;
+}
+#contact-us-post-form p{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.4px;
+    color: rgba(33, 33, 33, 0.6);
+}
+#terms-conditions{
+    display: flex;
+    justify-content: center;
+}
+.input-contact{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    color: #737373;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+  /* CONTACT US - FIM */
