--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -1343,6 +1343,34 @@ html, body {
     line-height: 20px;
     letter-spacing: 0.25px;
     color: #737373;
+    width: 450px;
+    height: 50px;
+    background: #F9F9F9;
+    border: 1px solid #E6E6E6;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+#submit-button-contact{
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    background: #ED1C23;
+    border-radius: 5px;
+    padding: 15px 40px;
+    width: 450px;
+    border: none;
+}
+#submit-button-contact:hover{
+    transform: scale(1.1);
+}
+.input-message{
+    height: 150px;
 }
 
 
